fix image on mobile

--- a/src/app/components/display-menu/display-menu.component.html
+++ b/src/app/components/display-menu/display-menu.component.html
@@ -135,7 +135,7 @@
                         </mat-chip-list>
                       </div>
                     </div>
-                    <div class="col-md-auto" style="padding-left: 50px">
+                    <div style="padding-left: 50px">
                       <img
                         class="big-food-image"
                         [src]="menuSectionItem.foodItem.imageUrl"
