enable disable food in menu just in edit mode

--- a/src/app/components/create-menu/create-menu.component.html
+++ b/src/app/components/create-menu/create-menu.component.html
@@ -56,7 +56,8 @@
                     let i = index
                   ">
                   <app-menu-section cdkDrag [index]="i" [allSectionsList]="allSectionsList"
-                    (sectionRemoved)="onSectionRemoved($event)" [sectionForm]="getSectionControlsIndex(i)">
+                    (sectionRemoved)="onSectionRemoved($event)" [isUpdate]="isEditMode"
+                    [sectionForm]="getSectionControlsIndex(i)">
                   </app-menu-section>
                 </div>
               </div>
