--- a/src/app/components/admin-board/admin-board.component.html
+++ b/src/app/components/admin-board/admin-board.component.html
@@ -1,32 +1,21 @@
 <div class="admin-board container-fluid">
   <div class="admin-board-content container">
-    <div class="d-flex flex-column" *ngIf="accessAllowed">
+    <div class="d-flex flex-column">
       <h2>{{ "admin.All-busnisses" | translate }}</h2>
       <ul class="restaurants list-group">
         <li *ngFor="let restaurant of restaurants" class="list-group-item">
           <div class="container">
             <div class="row align-items-center">
-              <div class="col-md-2">
+              <div class="col-md-4">
                 <span>{{ restaurant.name }}</span>
               </div>
-              <div class="col-md-10">
+              <div class="col-md-8">
                 <div class="row justify-content-end">
                   <div class="col-sm-auto">
                     <button
                       mat-raised-button
-                      class="btn btn-block"
-                      (click)="
-                        goToRoute(
-                          '/create-menu/' + restaurant._id + '/' + 'new-menu'
-                        )
-                      "
-                    >
-                      {{ "admin.CREATE-MENU" | translate }}
-                    </button>
-                  </div>
-                  <div class="col-sm-auto">
-                    <button
-                      mat-raised-button
+                      matTooltip="Preview what your customers will see"
+                      matTooltipClass="btn-tooltip"
                       class="btn btn-block"
                       (click)="goToRoute('/' + restaurant._id)"
                     >
@@ -36,6 +25,8 @@
                   <div class="col-sm-auto">
                     <button
                       mat-raised-button
+                      matTooltip="View QR code and download it"
+                      matTooltipClass="btn-tooltip"
                       class="btn btn-block"
                       (click)="goToRoute('/qrcode/' + restaurant._id)"
                     >
@@ -45,11 +36,13 @@
                   <div class="col-sm-2">
                     <button
                       mat-mini-fab
-                      color="primary"
+                      mat-raised-button
+                      matTooltip="Manage your business"
+                      matTooltipClass="btn-tooltip"
                       aria-label="Edit and manage business"
                       (click)="goToRoute('/detail/' + restaurant._id)"
                     >
-                      <mat-icon>{{ "admin.All-EDIT" | translate }}</mat-icon>
+                      <mat-icon>edit</mat-icon>
                     </button>
                   </div>
                 </div>
@@ -65,9 +58,6 @@
           </button>
         </a>
       </div>
-    </div>
-    <div class="alert alert-danger" *ngIf="!accessAllowed">
-      {{ content }}
     </div>
   </div>
 </div>
