--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home container-fluid">
   <div class="home-overlay"></div>
   <div class="home-content container">
-    <div class="contact-tracing-alert alert" [@fadeInDown]>
+    <div class="contact-tracing-alert alert" [@fadeInDown] *ngIf="!isLoggedIn">
       {{ "home.MESSAGE" | translate }}
       <a
         [routerLink]="['/register', { plan: 'contact-tracing' }]"
