--- a/src/app/components/create-menu/create-menu.component.html
+++ b/src/app/components/create-menu/create-menu.component.html
@@ -57,8 +57,7 @@
             <div class="addSectionContainer">
               <button
                 (click)="openFoodItemModal('addFoodItemModal')"
-                type="button
-                "
+                type="button"
                 class="btn btn-primary btn-circle btn-circle-sm m-1"
               >
                 <i class="fa fa-plus"></i>
