--- a/src/app/components/display-menu/display-menu.component.scss
+++ b/src/app/components/display-menu/display-menu.component.scss
@@ -1,10 +1,16 @@
+.top-padding {
+  padding-top: 71px;
+}
+
 .display-menu {
-  margin-top: 70px;
-  overflow: auto;
+  padding-left: 0;
+  padding-right: 0;
+  position: relative;
   display: flex;
+  overflow: auto;
+  min-height: 100vh;
+  width: 100%;
   justify-content: center;
-  align-items: center;
-  padding: 0;
 }
 
 .display-menu-content {
